--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,14 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.2",
+    "@react-sigma/core": "^5.0.2",
+    "@react-sigma/layout-forceatlas2": "^5.0.2",
+    "graphology": "^0.25.4",
+    "graphology-types": "^0.24.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.2"
+    "react-router-dom": "^7.5.2",
+    "sigma": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
