--- a/.deploy/nginx/Dockerfile
+++ b/.deploy/nginx/Dockerfile
@@ -8,4 +8,6 @@ RUN npm run build
 
 FROM nginx:stable
 COPY .deploy/nginx/nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=build /app/frontend/dist/.vite /usr/share/vite
 COPY --from=build /app/frontend/dist /usr/share/nginx/html
+RUN rm /usr/share/nginx/html/index.html
