--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.2",
+    "react-share": "^5.2.2",
     "sigma": "^3.0.1"
   },
   "devDependencies": {
