--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "@mui/material-nextjs": "^7.1.0",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -25,6 +26,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "openapi-typescript": "^7.8.0",
     "typescript": "^5"
   }
 }
